kagenti/installer/app/resources/ocp/istio-cni.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-cni
  labels:
    istio-discovery: enabled
