kagenti/installer/app/resources/ocp/ztunnel.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ztunnel
  labels:
    istio-discovery: enabled
